--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -1,25 +1,33 @@
 name: dlfe-lstm-wsi
 channels:
   - pytorch
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
   - python=3.9
-  - pytorch>=1.12.0
-  - torchvision
   - numpy>=1.21.0
   - pandas>=1.3.0
+  - scipy>=1.11.0
   - scikit-learn>=1.0.0
   - matplotlib>=3.5.0
   - seaborn>=0.11.0
-  - jupyter
-  - tensorboard
+  - pytorch>=1.12
+  - torchvision
+  - torchaudio
+  - cudatoolkit=11.8
   - pyyaml
   - tqdm
+  - numba>=0.57
+  - statsmodels>=0.14.0
+  - jupyter
+  - tensorboard
   - pip
   - pip:
-    - PyWavelets>=1.3.0        # VMD变分模态分解
-    - statsmodels>=0.13.0      # 时序分析
-    - optuna>=3.0.0           # 超参数优化
-    - mlflow>=1.28.0          # 实验管理
-    - wandb>=0.13.0           # 实验追踪
+    - plotly>=5.0.0
+    - optuna>=3.0.0
+    - mlflow>=1.28.0
+    - wandb>=0.13.0
+    - PyWavelets>=1.4.1
+    - python-dotenv>=0.20.0
+    - click>=8.0.0
