feat(v0.4.2): 物理约束异常检测 + 日志系统修复
核心改进：
1. 异常检测方法升级
   - 从IQR统计方法改为基于物理约束的领域知识驱动
   - 定义物理范围：power[0,55000]kW, irradiance[0,1200]W/m
   - 区分错误标记(-99/-999)和真实物理异常

2. 日志系统修复
   - 修复ExperimentLogger不支持%格式化的TypeError
   - 完全兼容标准Python logging API

3. 配置与文档
   - 新增物理约束异常检测方案文档
   - 更新CHANGELOG.md记录v0.4.2版本
   - 优化.gitignore完全忽略data/和experiments/

详见 CHANGELOG.md [0.4.2]

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ venv.bak/
 *.pt
 
 # 数据文件（大文件）
-data/raw/
-data/processed/
+data/
+!data/.gitkeep
 *.csv
 *.xlsx
 *.h5
@@ -29,11 +29,8 @@ data/processed/
 *.pickle
 
 # 实验结果（大文件）
-experiments/checkpoints/
-experiments/logs/*.log
-experiments/results/*.png
-experiments/results/*.pdf
-experiments/runs/
+experiments/
+!experiments/.gitkeep
 
 # 机器学习相关
 mlruns/
