--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,6 +11,7 @@ project:
 data:
   dataset: "甘肃光伏功率预测数据集"
   raw_dir: "C:/Users/Administrator/桌面/专利/data/2. 甘肃光伏功率预测数据集/data_original/solar_stations"
+  merge_method: "single"
   train_ratio: 0.7
   val_ratio: 0.2
   test_ratio: 0.1
@@ -19,6 +20,34 @@ data:
   station_column: station
   timestamp_column: timestamp
   required_columns: [power, irradiance, temperature, pressure, humidity]
+
+walk_forward:
+  enable: true
+  n_folds: 4
+  fold_definition:
+    fold1:
+      train_months: 12
+      val_months: 1
+      test_months: 2
+    fold2:
+      train_months: 15
+      val_months: 1
+      test_months: 2
+    fold3:
+      train_months: 18
+      val_months: 1
+      test_months: 2
+    fold4:
+      train_months: 21
+      val_months: 1
+      test_months: 2
+  online_learning:
+    enable: true
+    learning_rate_multiplier: 0.1
+    max_updates_per_fold: 100
+  weight_inheritance:
+    enable: true
+    strategy: full
 
 preprocessing:
   caching: true
@@ -29,6 +58,7 @@ preprocessing:
   vmd:
     n_modes: 5
     alpha: 2000
+    tau: 0.1
     tolerance: 1.0e-6
     max_iterations: 500
 
