feat(v0.5.3): 数据集集成与路径优化
📦 数据集集成
- 新增甘肃光伏数据集（8个站点，共545MW装机容量）
- data_original: 8个原始Excel数据文件
- data_processed: 8个处理后Excel数据文件
- 数据集分析报告：完整的数据集说明文档

🔧 技术改进
- 数据路径从绝对路径改为相对路径（./datas/）
- 提升项目可移植性和跨平台兼容性
- README文档更新：新增datas/目录说明
- 数据加载器优化：改进路径处理机制

📋 修改统计
- 修改文件：5个（README, config, data_loader, CHANGELOG）
- 新增文件：17个（16个Excel + 1个分析报告）

🎯 版本标识: v0.5.3 (2025-10-30)
作者: 雷英豪 <1485463967@qq.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,7 +10,7 @@ project:
 
 data:
   dataset: "甘肃光伏功率预测数据集"
-  raw_dir: "C:/Users/Administrator/桌面/专利/data/2. 甘肃光伏功率预测数据集/data_original/solar_stations"
+  raw_dir: "./datas/2. 甘肃光伏功率预测数据集/data_original/solar_stations"
   merge_method: "single"
   train_ratio: 0.7
   val_ratio: 0.2
