chore: 更新 .gitignore 忽略其他数据集
🔧 .gitignore 更新
- 忽略 datas/1. 河北光伏功率预测数据集/
- 忽略 datas/3. 澳大利亚气象和光伏数据集/
- 忽略 datas/4. 光伏模组功率预测数据集/
- 忽略 datas/5. 内蒙古光伏或风电数据/
- 保留 datas/2. 甘肃光伏功率预测数据集/（已提交到仓库）

📋 说明
只将甘肃数据集纳入版本控制，其他数据集仅作本地开发使用

作者: 雷英豪 <1485463967@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,15 @@ data/
 *.pkl
 *.pickle
 
+# 原始数据集目录（除甘肃数据集外）
+datas/1. 河北光伏功率预测数据集/
+datas/3. 澳大利亚气象和光伏数据集/
+datas/4. 光伏模组功率预测数据集/
+datas/5. 内蒙古光伏或风电数据/
+
+# 保留甘肃数据集（已提交到仓库）
+!datas/2. 甘肃光伏功率预测数据集/
+
 # 实验结果（大文件）
 experiments/
 !experiments/.gitkeep
