--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -1,31 +1,69 @@
-# DLFE-LSTM-WSI 核心依赖（不含 PyTorch GPU）
-PyWavelets>=1.4.1
+# DLFE-LSTM-WSI 项目依赖包
+# 本文件适用于pip安装，推荐使用environment.yml进行conda安装以获得更好的兼容性
+
+# ==================== PyTorch GPU (CUDA 12.4) ====================
+# 注意：请根据您的CUDA版本选择对应的PyTorch
+# CUDA 12.4: 使用以下命令安装
+# pip install torch==2.5.1+cu124 torchvision==0.20.1+cu124 torchaudio==2.5.1+cu124 --index-url https://download.pytorch.org/whl/cu124
+# 或使用清华源（国内加速）：
+# pip install torch==2.5.1+cu124 torchvision==0.20.1+cu124 torchaudio==2.5.1+cu124 -i https://pypi.tuna.tsinghua.edu.cn/simple/
+
+torch>=2.5.0
+torchvision>=0.20.0
+torchaudio>=2.5.0
+
+# ==================== 科学计算核心 ====================
+numpy>=2.0.0,<2.4.0
+pandas>=2.3.0,<2.4.0
+scipy>=1.13.0,<1.17.0
+scikit-learn>=1.6.0,<1.7.0
+numba>=0.57.0
 statsmodels>=0.14.0
-scipy>=1.11.0
-numba>=0.57.1
 
-# 机器学习核心
-scikit-learn>=1.0.0
-optuna>=3.0.0
+# ==================== 信号处理 ====================
+PyWavelets>=1.6.0
 
-# 数据处理与可视化
-pandas>=1.3.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
+# ==================== 数据可视化 ====================
+matplotlib>=3.9.0,<3.10.0
+seaborn>=0.13.0
 plotly>=5.0.0
 
-torch>=1.12.0
-torchvision
-torchaudio
+# ==================== 机器学习框架 ====================
+optuna>=4.5.0
+mlflow>=3.1.0
+wandb>=0.22.0
 
-# 实验管理与监控
-mlflow>=1.28.0
-tensorboard>=2.8.0
-wandb>=0.13.0
+# ==================== 深度学习工具 ====================
+tensorboard>=2.20.0
+jupyter>=1.0.0
+jupyterlab>=4.0.0
+ipykernel>=6.0.0
 
-# 配置管理与工具
+# ==================== 配置与工具 ====================
 pyyaml>=6.0
-tqdm>=4.64.0
-click>=8.0.0
+tqdm>=4.67.0
+click>=8.1.0
 python-dotenv>=0.20.0
+
+# ==================== Web框架（MLflow依赖） ====================
+fastapi>=0.117.0
+uvicorn>=0.37.0
+flask>=3.1.0
+werkzeug>=3.1.0
+
+# ==================== 数据库与存储 ====================
+sqlalchemy>=2.0.0
+alembic>=1.16.0
+
+# ==================== 云平台SDK ====================
+databricks-sdk>=0.67.0
+
+# ==================== 监控与日志 ====================
+sentry-sdk>=2.39.0
+colorlog>=6.9.0
+
+# ==================== 工具库 ====================
+pydantic>=2.11.0
+python-dateutil>=2.9.0
+requests>=2.32.0
+httpx>=0.28.0
