feat(server): AutoDL服务器端核心优化 - GPU内存管理与算法增强
🚀 核心算法优化
- DLFE三条优化路径实现 (+200行)
  * 稀疏矩阵优化：CSR格式，节省10-100倍内存
  * GPU lobpcg：实验性GPU加速（可选）
  * CPU eigsh：兜底方案，兼容性最好
- 新增矩阵稀疏性诊断函数 diagnose_matrix_sparsity()
- ADMM参数外部化配置：max_iter, tol, use_float32_eigh, use_sparse_matrix

💾 GPU内存管理增强
- DPSR后主动清理GPU缓存（避免DLFE阶段OOM）
- 矩阵构建后自动gc.collect() + torch.cuda.empty_cache()
- 禁用GPU lobpcg作为默认选项（改为可选参数）
- 容差从1e-6放宽到1e-5（加速收敛）

📊 可视化系统兼容性提升 (+98行)
- 中文字体优先级列表（支持Linux/Windows）
- 新增方法 _verify_chinese_font() 检测中文字体
- 新增方法 _set_plot_style() 样式自动降级
- 默认样式改为 seaborn-v0_8-whitegrid（适配新版matplotlib）

🔧 用户体验优化
- 训练日志单行刷新（替代tqdm多行输出）
- 缓存提示橙色高亮显示
- GPU模式日志去重（全局标志 _GPU_MODE_LOGGED）
- 模型构建参数清理（移除冗余batch_size）

📋 配置规范化
- 天气分类名称统一：partly_cloudy → cloudy
- 新增依赖：openpyxl>=3.0.0（支持Excel读写）
- 环境文件同步更新（4个文件）

🧹 代码清理
- 删除临时测试文件：test_admm_early_stop.py, test_gpu_eigh.py
- 功能已整合到主代码中

📈 统计数据
- 修改文件：15个（13修改 + 2删除）
- 代码行数：+378行 / -100行
- 净增：278行核心代码

🖥️ 环境信息
- 服务器：AutoDL
- 分支：server-dev
- 主题：GPU内存优化 + 稀疏矩阵算法 + 用户体验

作者: 雷英豪 <1485463967@qq.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -77,6 +77,10 @@ feature_engineering:
     sigma: 1.0
     alpha: 0.0009765625
     beta: 0.1
+    max_iter: 100
+    tol: 1.0e-5
+    use_float32_eigh: false
+    use_sparse_matrix: true
 
 model:
   lstm:
