--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -40,6 +40,9 @@ dependencies:
   - click>=8.0.0
   - python-dotenv>=0.20.0
   
+  # ==================== 数据格式支持 ====================
+  - openpyxl>=3.0.0
+  
   # ==================== Conda必需工具 ====================
   - pip>=25.0.0
   - setuptools>=80.0.0
