--- a/envs/exports/requirements.txt
+++ b/envs/exports/requirements.txt
@@ -71,6 +71,7 @@ python-dotenv>=0.20.0,<2.0.0
 # ==============================================
 # 数据格式支持
 # ==============================================
+openpyxl>=3.0.0,<4.0.0  # Excel文件读写支持
 h5py>=3.7.0,<4.0.0
 netcdf4>=1.6.0,<2.0.0
 
